// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update command update by interactions adds bodies for unsupported content types, but does not generate schemas for them 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "responses": Object {
          "201": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "string",
                    },
                    "name": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "id",
                    "name",
                  ],
                  "type": "object",
                },
              },
              "application/xml": Object {},
              "text/csv": Object {},
            },
            "description": "created response",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions does not generate patches for bodies with invalid schemas 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "properties": Object {
                  "id": Object {
                    "nullable": true,
                  },
                },
                "required": Array [
                  "id",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "201": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "string",
                    },
                    "newField": Object {
                      "type": "number",
                    },
                  },
                  "required": Array [
                    "id",
                    "newField",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "created resource",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generate patches for multiple interactions for the same operations 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "properties": Object {
                  "id": Object {
                    "type": "string",
                  },
                  "optionalField": Object {
                    "type": "number",
                  },
                },
                "required": Array [
                  "id",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generates patches for existing request bodies, matching by various content type formats 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "requestBody": Object {
          "content": Object {
            "application/json; charset=utf-8": Object {
              "schema": Object {
                "properties": Object {
                  "id": Object {
                    "type": "string",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "id",
                  "name",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generates patches for existing response bodies, matching by various content type formats 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "responses": Object {
          "201": Object {
            "content": Object {
              "application/json; charset=utf-8": Object {
                "schema": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "string",
                    },
                    "name": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "id",
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "created",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generates patches for response bodies 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "delete": Object {
        "responses": Object {
          "204": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
      "post": Object {
        "responses": Object {
          "201": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "string",
                    },
                    "optionalField": Object {
                      "type": "number",
                    },
                  },
                  "required": Array [
                    "id",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "automatically documented through Optic",
          },
          "400": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "error": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "error",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generates patches to extend existing request or response bodies 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "properties": Object {
                  "id": Object {
                    "type": "string",
                  },
                  "newField": Object {
                    "type": "number",
                  },
                  "optionalBoolean": Object {
                    "type": "boolean",
                  },
                },
                "required": Array [
                  "id",
                  "newField",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "201": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "string",
                    },
                    "newField": Object {
                      "type": "number",
                    },
                    "optionalBoolean": Object {
                      "type": "boolean",
                    },
                  },
                  "required": Array [
                    "id",
                    "newField",
                    "optionalBoolean",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "created resource",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions generates updated spec files for new request bodies 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "properties": Object {
                  "id": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "id",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions ignores interactions for undocumented operations 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "responses": Object {
          "200": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions only generates patches for 2xx, 3xx and 4xx responses 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "responses": Object {
          "201": Object {
            "description": "automatically documented through Optic",
          },
          "302": Object {
            "description": "automatically documented through Optic",
          },
          "400": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;

exports[`update command update by interactions only generates patches for request bodies with 2xx and 3xx responses 1`] = `
Object {
  "info": Object {
    "title": "Empty",
    "version": "0.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/examples/{exampleId}": Object {
      "post": Object {
        "responses": Object {
          "400": Object {
            "description": "automatically documented through Optic",
          },
        },
      },
    },
  },
}
`;
